# h99

./: .gitignore  h99.cabal
prof/: h99-prof.aux  h99-prof.hp  h99-prof.primesR-isPrime-fast  h99-prof.primesR-isPrime-slow  h99-prof.prof  h99-prof.prof10k  h99-prof.prof1k  h99-prof.ps
src/: Main.hs  P01_10_lists.hs  P11_20_lists.hs  P21_30_lists.hs  P31_40_arithmetic.hs  P31_41_arithmetic.hs  P46_50_logic.hs
